[project]
name = "concessional-loans"
version = "0.1.0"
description = "REST API for checking document packages for concessional loans"
requires-python = "==3.11.*"

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "SIM", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
